@@ -1,3 +1,10 @@
+2002-05-10  Tom Rix  <trix@redhat.com>
+
+	* coff64-rs6000.c (xcoff64_reloc_type_br): New function for 
+	xcoff64_ppc_relocate_section.
+	* coff-rs6000.c : Extern common xcoff_reloc_type functions.
+	* libxcoff.h: Common xcoff_reloc_type function declaration.
+
 2002-05-10  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-i386.c (elf_i386_relocate_section): Remove overflow checks
